--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h2 {
 	box-shadow : 0px 2px 8px gray;
 }
 
-#animProf, #animDoigt{
+#animProf{
 	position : fixed;
 	bottom: -110px;
 	left: -110px;
