--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	font-size : 13pt;
 	font-family : "Trebuchet MS", Arial, sans-serif;
+	background-image:radial-gradient(white, gray);
 }
 
 h2 {
@@ -13,15 +14,15 @@ h2 {
 	top : 0px;
 	width : 100%;
 	text-align : center;
-	border-bottom : 1px solid lightGray;
+	border-bottom : 5px solid black;
 }
 
 #status div {
 	display : inline-block;
 	padding : 10px 20px;
 	color : gray;
-	border-left : 1px solid lightGray;
-	border-right : 1px solid lightGray;
+	border-left : 5px solid black;
+	border-right : 5px solid black;
 }
 #status div+div {
 	border-left : none;
@@ -32,7 +33,7 @@ h2 {
 	margin : auto;
 	margin-top : 100px;
 	max-width : 600px;
-	border : 1px solid lightGray;
+	border : 5px solid black;
 }
 .section#intro {
 	display : block;
@@ -67,6 +68,16 @@ h2 {
 	position : fixed;
 	bottom: -110px;
 	left: -110px;
+}
+
+.tabNotes {
+	
+	padding : 10px;
+	margin : auto;
+	margin-top : 100px;
+	max-width : 600px;
+	border : 5px solid black;
+
 }
 
 
