--- a/style.css
+++ b/style.css
@@ -14,15 +14,15 @@ h2 {
 	top : 0px;
 	width : 100%;
 	text-align : center;
-	border-bottom : 5px solid black;
+	border-bottom : 3px solid black;
 }
 
 #status div {
 	display : inline-block;
 	padding : 10px 20px;
-	color : gray;
-	border-left : 5px solid black;
-	border-right : 5px solid black;
+	color : black;
+	border-left : 3px solid black;
+	border-right : 3px solid black;
 }
 #status div+div {
 	border-left : none;
@@ -33,7 +33,7 @@ h2 {
 	margin : auto;
 	margin-top : 100px;
 	max-width : 600px;
-	border : 5px solid black;
+	border : 3px solid black;
 }
 .section#intro {
 	display : block;
@@ -76,7 +76,7 @@ h2 {
 	margin : auto;
 	margin-top : 100px;
 	max-width : 600px;
-	border : 5px solid black;
+	border : 3px solid black;
 
 }
 
