--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font-size : 13pt;
-	font-family : "Trebuchet MS", Arial, sans-serif;
+	font-family: 'Old Standard TT', serif;
 	background-image:radial-gradient(white, gray);
 }
 
